# tickets-please-discord

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  README.ru.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  docker-build.yml  migration-check.yml
bot/: __init__.py  config.py  logging.py  main.py  runtime.py
bot/database/: __init__.py  base.py  enums.py  models.py  repositories.py  session.py
bot/database/migrations/: env.py  script.py.mako
bot/database/migrations/versions/: 20260530_0001_initial_schema.py  20260531_0002_add_guild_locale.py  20260531_0003_ticket_assignment_logs.py  20260531_0004_channel_names_and_indexes.py
bot/extensions/: __init__.py  tickets_commands.py  utility_commands.py
bot/i18n/: __init__.py  translator.py
bot/i18n/locales/: __init__.py  en.json  ru.json
bot/services/: __init__.py  logging_service.py  permissions_service.py  settings_service.py  setup_service.py  ticket_service.py
bot/ui/: __init__.py  embeds.py  modals.py  selects.py  views.py
bot/utils/: exceptions.py  formatters.py  limits.py  permissions.py
docs/: ARCHITECTURE.md  BOT.md  OPERATIONS.md  README.md  ROADMAP.md  WEB_ADMIN_EXPANSION.md
docs/en/: ARCHITECTURE.md  BOT.md  OPERATIONS.md  ROADMAP.md
docs/ru/: ARCHITECTURE.md  BOT.md  OPERATIONS.md  README.md  ROADMAP.md
scripts/: README.md  README.ru.md  docker-start.sh  local.ps1  server.sh  ubuntu-install-docker.sh
tests/: test_imports.py
web/: __init__.py  admin_service.py  main.py  schemas.py  security.py
