[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "tickets-please-discord"
version = "0.1.0"
description = "Discord ticket support bot built with hikari, lightbulb, miru, and PostgreSQL."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.111.0",
    "hikari>=2.0.0.dev120",
    "hikari-lightbulb>=3.2.4,<4.0.0",
    "hikari-miru>=4.0.0,<5.0.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "SQLAlchemy[asyncio]>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
tickets-please-bot = "bot.main:main"
tickets-please-admin = "web.main:run"

[tool.setuptools.packages.find]
include = ["bot*", "web*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
